Fix band photos on small screens.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -848,7 +848,7 @@ p {
     }
     /*Band Member Photos fix */
     .row-fluid .span2 { 
-		width: 17.8%
+		width: 15%
 	}
 }
 @media (max-width: 979px) {
